Added templates for expand and collapse Updated Sample with grouped

--- a/Blazm.Components/Blazm.Components/compilerconfig.json
+++ b/Blazm.Components/Blazm.Components/compilerconfig.json
@@ -1,10 +1,12 @@
-﻿[
+[
   {
     "outputFile": "wwwroot/css/Styles.css",
-    "inputFile": "Styles/Styles.scss"
+    "inputFile": "Styles/Styles.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "wwwroot/Scripts/JSInterop.js",
-    "inputFile": "Scripts/JSInterop.js"
+    "inputFile": "Scripts/JSInterop.js",
+    "sourceMap": false
   }
 ]
