--- a/Blazm.Components/Blazm.Components/Blazm.Components.csproj
+++ b/Blazm.Components/Blazm.Components/Blazm.Components.csproj
@@ -4,7 +4,13 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
     <LangVersion>8</LangVersion>
-    <Nullable>enable</Nullable>
+    <Authors>Jimmy Engström</Authors>
+    <Description>A collection of Blazor components</Description>
+    <Version>0.0.1</Version>
+    <PackageProjectUrl>https://github.com/EngstromJimmy/Blazm</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/EngstromJimmy/Blazm</RepositoryUrl>
+    <PackageTags>Blazor</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
