--- a/Blazm.Components/Blazm.Components/Blazm.Components.csproj
+++ b/Blazm.Components/Blazm.Components/Blazm.Components.csproj
@@ -6,9 +6,9 @@
     <LangVersion>8</LangVersion>
     <Authors>Jimmy Engström</Authors>
     <Description>A collection of Blazor components</Description>
-    <Version>0.0.1</Version>
-    <PackageProjectUrl>https://github.com/EngstromJimmy/Blazm</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/EngstromJimmy/Blazm</RepositoryUrl>
+    <Version>0.0.2</Version>
+    <PackageProjectUrl>https://github.com/EngstromJimmy/Blazm.Components</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/EngstromJimmy/Blazm.Components</RepositoryUrl>
     <PackageTags>Blazor</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
