Fixed error in Export caused by null value

--- a/Blazm.Components/Blazm.Components/Blazm.Components.csproj
+++ b/Blazm.Components/Blazm.Components/Blazm.Components.csproj
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/EngstromJimmy/Blazm.Components</RepositoryUrl>
     <PackageTags>Blazor</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
