--- a/Blazm.Components/Blazm.Components/Blazm.Components.csproj
+++ b/Blazm.Components/Blazm.Components/Blazm.Components.csproj
@@ -25,8 +25,8 @@
 
   <ItemGroup>
     <PackageReference Include="BlazorPro.BlazorSize" Version="2.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-rc.2.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-rc.2.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
     <PackageReference Include="NPOI" Version="2.5.1" />
   </ItemGroup>
 
