--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+          include-prerelease: true
+      
       - name: Publish application
         run: dotnet publish -c Release
         
@@ -36,10 +41,12 @@ jobs:
         with:
           html_path: ${{ env.PUBLISH_DIR }}/index.html
           base_href: REPOSITORY_NAME
+          
         # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. 
         # Allow files and folders starting with an underscore.
       - name: Add .nojekyll file
         run: touch ${{ env.PUBLISH_DIR }}/.nojekyll
+        
       - name: Commit to GitHub pages Repo
         if: success()
         uses: crazy-max/ghaction-github-pages@v1.5.1
