--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
  
         # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. 
         # Allow files and folders starting with an underscore.
-      - name: Add .nojekyll file
-        run: touch ${{ env.PUBLISH_DIR }}/.nojekyll
+#      - name: Add .nojekyll file
+#        run: touch ${{ env.PUBLISH_DIR }}/.nojekyll
         
       - name: Commit to GitHub pages Repo
         if: success()
